[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sshgit"
version = "0.1.0a1"
description = "Git clone/fetch/pull/push over SSH using dulwich + paramiko"
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "dulwich",
    "paramiko",
    "six",
    "typing; python_version < '3.5'",
]

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/sshgit"
"Bug Tracker" = "https://github.com/jifengwu2k/sshgit/issues"

[project.scripts]
sshgit = "sshgit:main"
